2010-04-19  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Unregister
	  pinned watch control when the watch is removed.

	* MonoDevelop.SourceEditor/PinnedWatchWidget.cs: Embed an
	  ObjectValueTreeView instance instead of a custom value
	  viewer.

2010-04-16  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: fixed warning.

2010-04-16  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ErrorTextMarker.cs:
	* MonoDevelop.SourceEditor/SourceEditorView.cs: Optimized
	  error bubbles.

2010-04-16  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: checked
	  document == null.

2010-04-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Levi Bard
	  <levi@unity3d.com> Cache selection mode.

2010-04-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed 'Bug
	  596511 - Code completion removes block selection and only
	  affects 1 line'

2010-04-13  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: ContentName
	  can be null if the file is not saved.

2010-04-13  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Added some
	  checks to avoid updating breakpoints when the editor has
	  been disposed.

2010-04-13  Mike Krüger  <mkrueger@novell.com>

	* gtk-gui/gui.stetic:
	* MonoDevelop.SourceEditor/SourceEditorOptions.cs:
	* MonoDevelop.SourceEditor.OptionPanels/BehaviorPanel.cs:
	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.BehaviorPanel.cs:
	  Implemented 'Bug 595598 - Intelligent placing of
	  semi-colons'.

2010-04-13  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Implemented
	  'Bug 595587 - Move code block to correct depth when
	  Alt+arrow moving'.

2010-04-13  Mike Krüger  <mkrueger@novell.com>
