@@ -35,6 +35,7 @@ FILES =  \
 	MonoDevelop.SourceEditor/LanguageItemTooltipProvider.cs \
 	MonoDevelop.SourceEditor/LanguageItemWindow.cs \
 	MonoDevelop.SourceEditor/MarkerOperationsHandler.cs \
+	MonoDevelop.SourceEditor/MessageBubbleCommands.cs \
 	MonoDevelop.SourceEditor/NavigationBar.cs \
 	MonoDevelop.SourceEditor/NavigationBarCommands.cs \
 	MonoDevelop.SourceEditor/PinnedWatchWidget.cs \
