@@ -110,7 +110,22 @@
 		<Command id = "MonoDevelop.SourceEditor.NavigationBarCommands.ToggleNavPanelViews"
 				defaultHandler = "MonoDevelop.SourceEditor.ToggleNavPanelViewsHandler"
 				_label = ""
-				type="array"/> 
+				type="array"/>
+		
+		<Command id = "MonoDevelop.SourceEditor.NavigationBarCommands.ToggleNavPanelViews"
+				defaultHandler = "MonoDevelop.SourceEditor.ToggleNavPanelViewsHandler"
+				_label = ""
+				type="array"/>
+		
+		<Command id = "MonoDevelop.SourceEditor.MessageBubbleCommands.HideIssues"
+				defaultHandler = "MonoDevelop.SourceEditor.HideIssuesHandler"
+				_label = "_Hide Issues"/>
+		
+		<Command id = "MonoDevelop.SourceEditor.MessageBubbleCommands.ToggleIssues"
+				defaultHandler = "MonoDevelop.SourceEditor.ToggleIssuesHandler"
+				_label = ""
+				type="array"/>
+				
 	</Extension>
 	
 	<Extension path = "/MonoDevelop/Ide/DisplayBindings">
@@ -159,6 +174,14 @@
 		<Section id = "Markers" _label = "Markers and Rulers" icon="md-markers-rulers" class = "MonoDevelop.SourceEditor.OptionPanels.MarkerPanel"/>
 		<Section id = "Behavior" _label = "Behavior" icon="md-text-editor-behavior" class = "MonoDevelop.SourceEditor.OptionPanels.BehaviorPanel"/>
 		<Section id = "SyntaxHighlighting" _label = "Syntax Highlighting" fill="true" icon="md-syntax-highlighting" class = "MonoDevelop.SourceEditor.OptionPanels.HighlightingPanel"/>
+	</Extension>
+	
+	<Extension path = "/MonoDevelop/Ide/MainMenu/View">
+		<ItemSet id = "MessageBubbles" _label = "_Message Bubbles" insertafter="MonoDevelop.Ide.Commands.ViewCommands.ViewList" insertbefore="ViewSeparator3">
+			<CommandItem id = "MonoDevelop.SourceEditor.MessageBubbleCommands.HideIssues" />
+			<SeparatorItem id = "Separator1" />
+			<CommandItem id = "MonoDevelop.SourceEditor.MessageBubbleCommands.ToggleIssues" />
+		</ItemSet>
 	</Extension>
 	
 </Addin>
